--- a/static/css/main.css
+++ b/static/css/main.css
@@ -930,6 +930,16 @@ footer.index-footer {
   header h1 {
     font-size: 2rem;
   }
+  .success {
+  background-color: var(--background-color);
+  width: 90% !important;
+  border-radius: 10px;
+  margin: auto;
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
 
   header h2 {
     font-size: 1.25rem;
