--- a/static/css/main.css
+++ b/static/css/main.css
@@ -883,6 +883,17 @@ footer.index-footer {
     align-items: center;
     margin-bottom: 50px;
   }
+    .success {
+  background-color: var(--background-color);
+  width: 280px !important;
+  max-width: 90% !important;
+  border-radius: 10px;
+  margin: auto;
+  padding: 30px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+    }
 }
 
 @media screen and (min-width: 721px) {
@@ -929,16 +940,6 @@ footer.index-footer {
 @media screen and (max-width: 720px) {
   header h1 {
     font-size: 2rem;
-  }
-  .success {
-  background-color: var(--background-color);
-  width: 90% !important;
-  border-radius: 10px;
-  margin: auto;
-  padding: 30px 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   }
 
   header h2 {
